<resources>
    <string name="app_name">Sabitify</string>
    <string name="please_wait">Please wait…</string>
    <string name="no_internet_connection">No internet connection !!!!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us">About us</string>
    <string name="about_us_description">Welcome to Sabitify, your go-to platform for discovering student events and clubs in Bulgaria!
        Our mission is to connect students with vibrant opportunities to learn, grow, and have fun.
        Whether you\'re looking for social meetups, professional workshops, cultural festivals, or athletic clubs,
        we’ve got you covered. Explore a wide range of activities hosted by local student organizations and find your community.
        With Sabitify, you can:
        Stay updated on upcoming events and activities in Bulgaria.
        Join clubs that match your interests and passions.
        Meet like-minded peers and build lasting connections.
        Enhance your university experience through unique opportunities.
        Get ready to make the most of your time in Bulgaria — because student life is more than just academics.
        Dive in and start exploring today! Your next adventure is just a click away.</string>
    <string name="events">Events</string>
    <string name="clubs">Clubs</string>
    <string name="exit">Exit</string>
    <string name="do_you_really_want_to_exit">Do you really want to exit?</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="logo">logo</string>
    <string name="joisadjoasdijoasd">joisadjoasdijoasd</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="delete">Delete?</string>
    <string name="are_you_sure_you_want_to_delete_it">Are you sure you want to delete it</string>
    <string name="date">Date</string>
    <string name="are_you_sure_you_want_to_delete">Are you sure you want to delete?</string>
    <string name="image">image</string>
    <string name="where">Where</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">Register</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="email_address">Email Address</string>
    <string name="please_login_with_your_information">Please login with your information</string>
    <string name="comfirm_password">Comfirm password</string>
    <string name="password">Password</string>
    <string name="confirm_your_password">Confirm_your_password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="full_name">Full name</string>
    <string name="please_register_with_your_information">Please register with your information</string>
    <string name="liked_events">Liked events</string>
    <string name="when">When</string>
</resources>