<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_20dp">

        <ImageView
            android:id="@+id/ivItem"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_300dp"
            android:contentDescription="@string/image"
            tools:src="@drawable/sabitify_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/date"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_20sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/ivRead"
                android:layout_width="0dp"
                android:layout_height="@dimen/_100dp"
                android:layout_weight="1"
                tools:src="@drawable/liked" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/_20sp"
            tools:text="@tools:sample/date/mmddyy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEventTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/_20sp"
            tools:text="@tools:sample/lorem" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEventDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="@dimen/_20sp"
            tools:text="@tools:sample/lorem/random" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/where"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />

    </LinearLayout>
</ScrollView>